# etools-partner-reporting-portal

./: .env.dev  .env.example  .gitignore  .gitmodules  LICENSE  README.md  circle.yml  docker-compose-dev.yml  docker-compose.be.yml  docker-compose.fe-id-mgmt.yml  docker-compose.fe-parallel.yml  docker-compose.fe-polybuilt.yml  docker-compose.fe.yml  docker-compose.full.yml  docker-compose.polymer-bundle.yml  docker-compose.yml  fabfile.py  pyproject.toml
django_api/: .coveragerc  .env.example  .flake8  .isort.cfg  .pdm-python  Dockerfile  Dockerfile-base  Dockerfile-dev  Dockerfile-installed  Dockerfile-local  Makefile  Pipfile  codefresh_django.yml  manage.py  patch_drfpasswordless.py  pyproject.toml
django_api/django_api/: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  circle.yml  manage.py  manage_debug.py  runtests.sh  urls.py  uwsgi.ini  wsgi.py
django_api/django_api/apps/account/: admin.py  factories.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
django_api/django_api/apps/activity/: admin.py  models.py
django_api/django_api/apps/analytics/: admin.py  models.py
django_api/django_api/apps/cluster/: admin.py  apps.py  export.py  export_indicators.py  factories.py  filters.py  import_indicators.py  models.py  serializers.py  urls.py  views.py
django_api/django_api/apps/core/: admin.py  api.py  api_error_codes.py  cartodb.py  celery.py  common.py  countries.py  cron.py  factories.py  fields.py  filters.py  forms.py  helpers.py  mixins.py  models.py  permissions.py  serializer.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
django_api/django_api/apps/id_management/: apps.py  permissions.py  serializers.py  urls.py
django_api/django_api/config/: celery.py  settings.py  wsgi.py
django_api/django_api/settings/: __init__.py  base.py  dev.py  local_base.py  prod.py  production.py  staging.py  test.py
django_api/django_api/templates/: custom_pdf_base.css  custom_pdf_base.html
django_api/django_api/utils/: __init__.py  celery.py  factories.py  forms.py  mixins.py  parsers.py
django_api/etools_prp/: __init__.py  uwsgi.ini
django_api/etools_prp/config/: settings.py  urls.py  wsgi.py
django_api/etools_prp/templates/: 404.html  500.html  http_codes_base.html
django_api/fixtures/: account.json  cluster.json  core.json  groups.json  partner.json  periodic_tasks.json  reporting_entities.json  sites.json
django_api/requirements/: base.txt  dev.txt  prod.txt
django_api/tests/: conftest.py
(+3443 files in other folders)
