[project]
name = "etools-prp"
version = "1.0.0"
description = "UNICEF eTools Partner Reporting Portal"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "azure-common<=1.1.27",
    "azure-core>=1.26.0",
    "azure-storage-blob>=12.19.0",
    "azure-storage-common<=2.1",
    "Babel>=2.13.0",
    "boto3>=1.28.0",
    "carto<=1.11.3",
    "celery~=5.3.0",
    "cryptography~=42.0.0",
    "django~=4.2.26",
    "django-admin-extra-buttons>=1.5.8",
    "django-post-office>=3.9.0",
    "django-celery-beat~=2.5.0",
    "django-celery-email<=3.0",
    "django-celery-results~=2.5.0",
    "django-cors-headers>=4.0.0",
    "django-cron>=0.6.0",
    "django-environ<=0.4.5",
    "django-extensions>=3.2.0",
    "django-filter>=23.0",
    "django-leaflet>=0.29.0",
    "django-model-utils>=4.3.0",
    "django-mptt>=0.17.0",
    "django-paintstore<=0.2",
    "redis>=4.5.0",
    "django-redis-cache<=3.0",
    "drf-yasg>=1.21.0",
    "django-storages>=1.13.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-gis>=1.0",
    "djangorestframework-simplejwt>=5.2.0",
    "drfpasswordless==1.5.7",
    "jsonschema<=4.4.0",
    "newrelic==9.9.1",
    "openpyxl<=3.0.7",
    "psycopg2-binary~=2.9.9",
    "pycountry>=22.3.5",
    "python-json-logger<=2.0.2",
    "python-social-auth<=0.3.6",
    "pyrestcli<=0.6.11",
    "requests>=2.31.0",
    "setuptools<82",
    "sentry-sdk==1.27.0",
    "social-auth-app-django>=5.4.0",
    "social-auth-core>=4.5.0",
    "unicef-notification>=1.4.1",
    "unicef-locations<=4.0",
    "uWSGI>=2.0.24",
    "weasyprint~=61.0",
    "pydyf<0.11.0",
    "pypdf>=3.0.0",
    "reportlab>=4.4.10",
]

[project.optional-dependencies]
dev = [
    "factory-boy",
    "flake8",
    "django-debug-toolbar",
    "django-fixture-magic",
    "isort",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "factory-boy",
    "flake8",
    "django-debug-toolbar",
    "django-fixture-magic",
    "isort",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"